--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,9 @@
 VITE_VUE_APP_BASE_URL=http://localhost:3000
+
 VITE_VUE_APP_USERID_SECRET=http://localhost:3000
+
+VITE_LOCAL_STORAGE_ENCRYPT=qceLMS2023
+
+VITE_API_SERVER=http://localhost:3000
+
+VITE_GOOGLE_CLIENTID=743451955735-gq84jn31hiq6t86m4uvv4bs32vhcf2p3.apps.googleusercontent.com
