--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-resize-text": "^0.1.1",
     "vue-router": "^4.0.13",
     "vue-search-input": "^1.1.11",
+    "vue3-google-login": "^2.0.23",
     "vuetify": "^3.3.1",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
